--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
 		"deploy": "pnpm build && pnpx gh-pages -d ./build -t true"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.2.5",
-		"@sveltejs/adapter-static": "^3.0.5",
-		"@sveltejs/kit": "^2.7.2",
+		"@sveltejs/adapter-auto": "^3.3.1",
+		"@sveltejs/adapter-static": "^3.0.6",
+		"@sveltejs/kit": "^2.7.5",
 		"@sveltejs/vite-plugin-svelte": "^3.1.2",
 		"@tailwindcss/typography": "^0.5.15",
 		"@types/eslint": "^9.6.1",
 		"autoprefixer": "^10.4.20",
-		"eslint": "^9.13.0",
+		"eslint": "^9.14.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.46.0",
-		"globals": "^15.11.0",
+		"globals": "^15.12.0",
 		"picomatch": "^4.0.2",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.7",
@@ -32,13 +32,14 @@
 		"svelte-check": "^4.0.5",
 		"tailwindcss": "^3.4.14",
 		"typescript": "^5.6.3",
-		"typescript-eslint": "^8.10.0",
-		"vite": "^5.4.9"
+		"typescript-eslint": "^8.13.0",
+		"vite": "^5.4.10"
 	},
 	"type": "module",
 	"dependencies": {
 		"bits-ui": "^0.21.16",
 		"clsx": "^2.1.1",
+		"lucide-svelte": "^0.454.0",
 		"tailwind-merge": "^2.5.4",
 		"tailwind-variants": "^0.2.1"
 	},
